# nrlf-converter

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
nrlf_converter/: __init__.py
nrlf_converter/convert_nrl_to_r4/: nrl_to_r4.py
nrlf_converter/convert_nrl_to_r4/tests/: test_integration.py  test_nrl_to_r4.py
nrlf_converter/nrl/: constants.py  document_pointer.py  errors.py
nrlf_converter/nrl/tests/: test_document_pointer.py
nrlf_converter/nrl/tests/data/: NRLF-590-attachment_with_title.json  NRLF-590-bad_metadata.json  NRLF-590-period_with_timezone.json  NRLF-607-version_in_coding.json  NRLF-626-clinicals_in_replaces_reference.json  NRLF-626-optional_class.json  NRLF-626-period_with_r4_timestamp.json  NRLF-626-relatesTo_with_identifier.json  NRLF-637-replaces_reference_with_different_url.json  NRLF-642-no_ssp.json  NRLF-645-optional_context.json  test.json
nrlf_converter/r4/: constants.py  document_reference.py
nrlf_converter/utils/: constants.py  utils.py
nrlf_converter/utils/tests/: test_utils.py
nrlf_converter/utils/validation/: errors.py  model.py  validators.py
nrlf_converter/utils/validation/tests/: test_validators.py
scripts/: create_release.sh  github_tag_is_latest_tag.sh  integration_tests_from_build.sh  version_equals_latest_tag.sh  version_greater_than_latest_tag.sh
