[tool.poetry]
name = "nrlf-converter"
version = "0.0.12"
description = "NHS Clinicals Record Locator Document Pointer to HL7 FHIR R4 DocumentReference conversion"
authors = ["NHSDigital"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NHSDigital/nrlf-converter"
keywords = ["nhs", "clinicals", "record locator", "document pointer","fhir", "r4", "hl7",  "documentreference"]
packages = [
    { include = "nrlf_converter" },
]
exclude = ["**/tests/*"]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
pytest = "^7.1.3"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
pytest-custom-exit-code = "^0.3.0"
pydantic = "^1.10.7"
hypothesis = "^6.98.8"
requests = "^2.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["integration: Integration tests"]
